--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^13.5.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
