--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "lucide-react": "^0.525.0"
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.525.0",
+    "react-i18next": "^15.7.2"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.6.4"
