--- a/package.json
+++ b/package.json
@@ -1,37 +1,17 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "alkarama-hub",
+  "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": ">=18 <19"
+    "node": "18.x"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "lint": "eslint src --ext .js,.jsx",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "build": "npm --prefix client run build",
+    "postinstall": "npm --prefix client install"
   },
   "dependencies": {
-    "i18next": "^25.4.2",
-    "i18next-browser-languagedetector": "^8.2.0",
-    "lucide-react": "^0.525.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^15.7.2",
-    "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1"
-  },
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-react-app": "^7.0.1",
-    "html-webpack-plugin": "^5.6.4"
-  },
-  "eslintConfig": {
-    "extends": ["react-app", "react-app/jest"]
-  },
-  "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "express": "^4.19.2",
+    "json-server": "^0.17.3"
   }
 }
